k8s/devinfra/sourcegraph/frontend_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6060"
    sourcegraph.prometheus/scrape: "true"
  labels:
    app: sourcegraph-frontend
    app.kubernetes.io/component: frontend
    deploy: sourcegraph
    sourcegraph-resource-requires: no-cluster-admin
  name: sourcegraph-frontend
spec:
  ports:
  - name: http
    port: 3080
    protocol: TCP
    targetPort: 3080
  selector:
    app: sourcegraph-frontend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
