k8s/devinfra/sourcegraph/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sourcegraph-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "sourcegraph-cert"
    kubernetes.io/ingress.global-static-ip-name: "sourcegraph-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sourcegraph-frontend
            port:
              number: 3080
